--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    border: solid red 1px;
+}
+
 body {
     margin: 0;
 }
@@ -18,7 +22,7 @@ form {
 .picture {
     background-image: url(./picture.jpg);
     background-position: center;
-    background-size: 100%;
+    background-size: 110%;
     background-repeat: no-repeat;
     width: 35vw;
 }
