--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 * {
     border: solid red 1px;
 }
@@ -23,7 +25,17 @@ body {
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    
+    background-color: #03021A;
+    color: white;
+    font-family: Nunito;
+}
+
+#side-items {
+    padding: 30px;
+}
+
+#introduction {
+    font-size: 1.5em;
 }
 
 form {
@@ -39,4 +51,8 @@ form {
     background-size: 110%;
     background-repeat: no-repeat;
     width: 40vw;
+}
+
+input, label {
+    display: block;
 }
