--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,12 @@ form {
     padding-left: 50px;
 }
 
+#form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 .picture {
     height: 100vh;
     background-image: url(./picture.jpg);
@@ -55,9 +61,29 @@ input, label {
     display: block;
 }
 
+input {
+    height: 18px;
+    width: 200px;
+}
+
 #names, #contact, #passwords {
     display: flex;
     flex-direction: row;
-    gap: 100px;
+    gap: 50px;
 
+}
+
+button {
+    border: 2px solid yellow;
+    border-radius: 8px;
+    background-color: black;
+    color: white;
+    height: 50px;
+    width: 200px;
+    font-family: Nunito;
+    font-size: 1.2em;
+}
+
+span {
+    color: yellow;
 }
