--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
     justify-content: flex-start;
     padding-top: 15vh;
     height: auto;
-    background-color: #11111A ;
+    background-color: #161721;
     color: white;
     font-family: Nunito;
 }
@@ -57,7 +57,7 @@ form {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    background-color: #09090E;
+    background-color: #30343f;
     padding-left: 50px;
 }
 
@@ -81,26 +81,30 @@ input, label {
 }
 
 input {
-    height: 18px;
-    width: 200px;
+    height: 25px;
+    width: 250px;
+    background-color:#52607c;
+    border: 1px solid #161721;
+    border-radius: 5px;
 }
 
 #names, #contact, #passwords {
     display: flex;
     flex-direction: row;
-    gap: 50px;
+    gap: 60px;
 
 }
 
 button {
-    border: 2px solid yellow;
+    border: 0;
     border-radius: 8px;
-    background-color: black;
+    background-color: #52607c;
     color: white;
     height: 50px;
     width: 200px;
     font-family: Nunito;
     font-size: 1.2em;
+    font-weight: bold;
 }
 
 span {
