--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,6 @@ body {
     display: flex;
     flex-direction: row;
     height: auto;
-    justify-content: flex-start;
-    flex: 1;
 }
 
 .logo {
@@ -65,6 +63,7 @@ form {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    padding-bottom: 50px;
 }
 
 .picture {
@@ -95,6 +94,11 @@ input {
 
 }
 
+#account {
+    margin-top: 30px;
+    margin-left: 50px;
+}
+
 button {
     border: 0;
     border-radius: 8px;
@@ -109,4 +113,19 @@ button {
 
 span {
     color: yellow;
+}
+
+a {
+    color: white;
+}
+
+#credits {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    top: 96vh;
+    color: white;
+    text-decoration: none;
+    align-self: center;
 }
